--- a/apps/front/src/app/app.component.html
+++ b/apps/front/src/app/app.component.html
@@ -1,4 +1,5 @@
 <h1>{{ title | uppercase }}</h1>
+<button (click)="sendPost()">Send POST</button>
 <form [formGroup]="form" (ngSubmit)="onSubmit()">
   <div>
     <label for="">Username</label>
