--- a/apps/front/src/styles.scss
+++ b/apps/front/src/styles.scss
@@ -1,1 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
+/* Reset CSS*/
+@import '~normalize.css';
+/* Material prebuilt theme */
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
