autofocus on first input

--- a/apps/front/src/app/login/login-layout/login-layout.component.html
+++ b/apps/front/src/app/login/login-layout/login-layout.component.html
@@ -11,6 +11,7 @@
         <mat-label>Nombre de usuario</mat-label>
         <input
           matInput
+          autofocus
           formControlName="username"
           required
           type="text"
