--- a/apps/front/src/app/chat/components/channel-info/channel-info.component.html
+++ b/apps/front/src/app/chat/components/channel-info/channel-info.component.html
@@ -1,8 +1,8 @@
 <ng-container *ngIf="focus$ | async as focus">
   <h2>{{ focus.title }}</h2>
-  <ng-container *ngIf="messages$ | async as messages">
+  <!-- <ng-container *ngIf="messages$ | async as messages">
     <div>
       <span>Total messages: {{ messages.length }}</span>
     </div>
-  </ng-container>
+  </ng-container> -->
 </ng-container>
