--- a/apps/front/src/app/chat/chat-layout/chat-layout.component.scss
+++ b/apps/front/src/app/chat/chat-layout/chat-layout.component.scss
@@ -1,35 +1,40 @@
 :host {
-  position: absolute;
+  height: 100%;
   width: 100%;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
   display: flex;
   flex-direction: column;
+}
+chat-and-call-chat-header {
+  flex: 0 0;
+}
+
+mat-sidenav-container {
+  flex: 1 1;
+  display: block;
 }
 
 mat-sidenav {
   min-width: 200px;
 }
 
-mat-sidenav-container {
-  flex: 1;
-  max-height: 100%;
-}
-
 mat-sidenav-content {
-  max-height: 100%;
   display: flex;
   flex-direction: column;
 }
 
 .chat {
   background-color: papayawhip;
-  flex: 1;
+  flex: 1 1;
   max-width: 100%;
 }
 
 :host ::ng-deep .chat > div.cdk-virtual-scroll-content-wrapper {
   max-width: 100%;
 }
+
+@media (max-width: 600px) {
+  mat-sidenav {
+    min-width: 90%;
+  }
+}
+
