--- a/apps/front/src/styles.scss
+++ b/apps/front/src/styles.scss
@@ -7,14 +7,14 @@
   box-sizing: border-box;
 }
 html {
-  position: relative;
-  max-width: 1900px;
+  height: 100%;
+  max-width: 1920px;
   margin: 0 auto;
-  background-color: #777;
+  background-color: gray;
 }
 
-html,
 body {
   font-family: Roboto, 'Helvetica Neue', 'sans-serif';
   height: 100%;
+  min-height: -webkit-fill-available;
 }
