working scroll strategy and ui minor fixes

--- a/apps/front/src/app/chat/chat-layout/chat-layout.component.scss
+++ b/apps/front/src/app/chat/chat-layout/chat-layout.component.scss
@@ -32,9 +32,10 @@ mat-sidenav-content {
   max-width: 100%;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 800px) {
   mat-sidenav {
-    min-width: 90%;
+    min-width: 98%;
+    margin-right: 2%;
   }
 }
 
