--- a/apps/front/src/app/chat/chat-layout/chat-layout.component.html
+++ b/apps/front/src/app/chat/chat-layout/chat-layout.component.html
@@ -1,12 +1,17 @@
 <chat-and-call-chat-header></chat-and-call-chat-header>
 <!-- <chat-and-call-video-call></chat-and-call-video-call> -->
 <mat-sidenav-container>
-  <mat-sidenav #sidenav [mode]="mobileQuery.matches ? 'over' : 'side'" opened>
+  <mat-sidenav #sidenav [mode]="'side'" opened disableClose>
     <h2>Channels</h2>
     <chat-and-call-channel-selector></chat-and-call-channel-selector>
   </mat-sidenav>
   <mat-sidenav-content *ngIf="focus$ | async as focus">
-    <button *ngIf="!sidenav.opened" mat-mini-fab color="primary" (click)="openMenu()">
+    <button
+      *ngIf="!(sidenav.openedChange.asObservable() | async)"
+      mat-mini-fab
+      color="primary"
+      (click)="openMenu()"
+    >
       <mat-icon>menu</mat-icon>
     </button>
 
@@ -16,8 +21,7 @@
     <ng-container *ngIf="messages$ | async as messages">
       <div>
         <span>Index: {{ index$ | async }}</span>
-        <span>Viewed: {{ newMessagesCount }}</span>
-        <button mat-mini-fab (click)="goToEnd(messages.length)" color="">
+        <button mat-mini-fab (click)="goToEnd()" color="">
           <mat-icon>arrow_downward</mat-icon>
         </button>
         <button (click)="fakeMessages(focus)">Test messages</button>
@@ -28,10 +32,7 @@
         (scrolledIndexChange)="index$.next($event)"
       >
         <ng-container *cdkVirtualFor="let m of messages; let isLast = last">
-          <chat-and-call-message
-            [message]="m"
-            (viewed)="onViewed($event)"
-          ></chat-and-call-message>
+          <chat-and-call-message [message]="m"></chat-and-call-message>
         </ng-container>
       </cdk-virtual-scroll-viewport>
     </ng-container>
