--- a/apps/front/src/styles.scss
+++ b/apps/front/src/styles.scss
@@ -16,6 +16,8 @@ html {
 
 body {
   font-family: Roboto, 'Helvetica Neue', 'sans-serif';
+
   height: 100%;
+  width: 100%;
   min-height: -webkit-fill-available;
 }
