--- a/apps/front/src/app/chat/chat-layout/chat-layout.component.scss
+++ b/apps/front/src/app/chat/chat-layout/chat-layout.component.scss
@@ -1,34 +1,42 @@
 :host {
-  height: 100%;
   width: 100%;
+  flex: 1 1;
   display: flex;
   flex-direction: column;
 }
+
 chat-and-call-chat-header {
   flex: 0 0;
 }
 
 mat-sidenav-container {
-  flex: 1 1;
-  display: block;
+  flex: 1 1 100%;
+
 }
 
 mat-sidenav {
   min-width: 200px;
+  min-height: 100%;
 }
 
 mat-sidenav-content {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.content {
+  min-height: 100%;
   display: flex;
   flex-direction: column;
+  border: 1px solid aqua;
 }
 
 .chat {
   background-color: papayawhip;
   flex: 1 1;
-  max-width: 100%;
-}
-
-:host ::ng-deep .chat > div.cdk-virtual-scroll-content-wrapper {
   max-width: 100%;
 }
 
