--- a/apps/front/src/app/chat/components/channel-selector/channel-selector.component.html
+++ b/apps/front/src/app/chat/components/channel-selector/channel-selector.component.html
@@ -7,7 +7,7 @@
     *ngFor="let channel of channels; let first = first"
     (click)="setFocus(channel.id)"
   >
-    <mat-icon mat-list-icon>home</mat-icon>
+    <mat-icon mat-list-icon>{{ channel.type | channelIcon }}</mat-icon>
     <p>{{ channel.title }}</p>
   </mat-list-option>
 </mat-selection-list>
