orm migrated, channel format

--- a/apps/front/src/app/chat/components/message-bar/message-bar.component.html
+++ b/apps/front/src/app/chat/components/message-bar/message-bar.component.html
@@ -14,7 +14,7 @@
       type="button"
       mat-mini-fab
       color=""
-      *ngIf="focus.type === 2"
+      *ngIf="focus.type === channelTypes.Personal"
       (click)="file_input.click()"
     >
       <mat-icon>attach_file</mat-icon>
