Set focus trap on spinner modal

--- a/libs/utils/forms-shared/src/lib/loading/loading-spinner/loading-spinner.component.scss
+++ b/libs/utils/forms-shared/src/lib/loading/loading-spinner/loading-spinner.component.scss
@@ -8,6 +8,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 9999;
 }
 
 .spinner-container {
@@ -15,6 +16,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  &:focus {
+    outline: none;
+  }
 }
 
 .message {
