--- a/libs/utils/forms-shared/src/lib/loading/loading-spinner/loading-spinner.component.html
+++ b/libs/utils/forms-shared/src/lib/loading/loading-spinner/loading-spinner.component.html
@@ -1,4 +1,4 @@
-<div class="spinner-container">
+<div class="spinner-container" cdkTrapFocus cdkTrapFocusAutoCapture tabindex="0">
   <mat-spinner color="primary"></mat-spinner>
   <!-- <p class="message">{{ message }}</p> -->
 </div>
