--- a/apps/front/src/app/signup/signup-layout/signup-layout.component.html
+++ b/apps/front/src/app/signup/signup-layout/signup-layout.component.html
@@ -1,9 +1,9 @@
-<ng-container *transloco="let t; read: 'signup'">
+<ng-container *transloco="let t">
   <mat-card class="form-card">
-    <mat-card-header>
+    <mat-card-header style="justify-content: center">
       <mat-card-title>
         <mat-icon [inline]="true">assignment</mat-icon>
-        <span>{{ t('signupTitle') }}</span>
+        <span>{{ t('doSignup') }}</span>
       </mat-card-title>
     </mat-card-header>
 
@@ -16,7 +16,13 @@
       >
         <mat-form-field appearance="outline" [controlErrors]="errors.username">
           <mat-label>{{ t('user') }}</mat-label>
-          <input matInput type="text" formControlName="username" required />
+          <input
+            matInput
+            type="text"
+            formControlName="username"
+            [placeholder]="t('user')"
+            required
+          />
           <span matSuffix [ngSwitch]="usernameControl.status">
             <mat-spinner
               *ngSwitchCase="'PENDING'"
@@ -31,10 +37,10 @@
         </mat-form-field>
 
         <mat-form-field appearance="outline" [controlErrors]="errors.email">
-          <mat-label>{{ t('mail') }}</mat-label>
+          <mat-label>{{ t('signup.mail') }}</mat-label>
           <input
             matInput
-            [placeholder]="t('mail')"
+            [placeholder]="t('signup.mail')"
             formControlName="email"
             required
           />
@@ -60,24 +66,30 @@
             [type]="showPassword ? 'text' : 'password'"
             required
           />
-          <mat-icon matSuffix (click)="showPassword = !showPassword">{{
-            showPassword ? 'visibility_off' : 'visibility'
-          }}</mat-icon>
+          <mat-icon
+            class="clickable"
+            matSuffix
+            (click)="showPassword = !showPassword"
+            >{{ showPassword ? 'visibility_off' : 'visibility' }}</mat-icon
+          >
           <mat-error autofillErrors></mat-error>
         </mat-form-field>
 
         <mat-form-field appearance="outline" [controlErrors]="errors.password2">
-          <mat-label>{{ t('repeatPassword') }}</mat-label>
+          <mat-label>{{ t('signup.repeatPassword') }}</mat-label>
           <input
             matInput
-            [placeholder]="t('repeatPassword')"
+            [placeholder]="t('signup.repeatPassword')"
             formControlName="password2"
             [type]="showPassword2 ? 'text' : 'password'"
             required
           />
-          <mat-icon matSuffix (click)="showPassword2 = !showPassword2">{{
-            showPassword2 ? 'visibility_off' : 'visibility'
-          }}</mat-icon>
+          <mat-icon
+            class="clickable"
+            matSuffix
+            (click)="showPassword2 = !showPassword2"
+            >{{ showPassword2 ? 'visibility_off' : 'visibility' }}</mat-icon
+          >
           <mat-error autofillErrors></mat-error>
         </mat-form-field>
 
@@ -88,9 +100,11 @@
     </mat-card-content>
 
     <mat-card-footer>
-      <h3>¿Ya estás registrado?</h3>
-      <a [routerLink]="['/home', 'login']" routerLinkActive="router-link-active"
-        >Inicia sesión</a
+      <h3>{{ t('signup.alreadyRegistered') }}</h3>
+      <a
+        [routerLink]="['/home', 'login']"
+        routerLinkActive="router-link-active"
+        >{{ 'doLogin' | transloco }}</a
       >
     </mat-card-footer>
   </mat-card>
